<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_detail"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:elevation="2dp"
            android:src="@drawable/photo_yudhy"
            app:civ_border_color="#fff"
            app:civ_border_width="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <android.support.constraint.Guideline
            android:id="@+id/HGuideLine"
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="216dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/VGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="116dp" />

        <TextView
            android:id="@+id/tv_title_nama"
            style="@style/Font.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_nama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/HGuideLine" />

        <TextView
            style="@style/Font.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitikDua"
            app:layout_constraintEnd_toStartOf="@+id/VGuideLine"
            app:layout_constraintTop_toTopOf="@+id/HGuideLine" />

        <TextView
            android:id="@+id/tv_nama_detail"
            style="@style/Font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/VGuideLine"
            app:layout_constraintTop_toTopOf="@+id/HGuideLine"
            app:layout_constraintWidth_default="wrap"
            tools:text="Ahmad Wahyudi" />

        <TextView
            android:id="@+id/tv_title_ttl"
            style="@style/Font.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tempat_tanggal_lahir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_detail" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Font.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/TitikDua"
            app:layout_constraintEnd_toStartOf="@+id/VGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_detail" />

        <TextView
            android:id="@+id/tv_ttl_detail"
            style="@style/Font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_detail"
            app:layout_constraintWidth_default="wrap"
            tools:text="Selayar, 19 September 1999" />

        <TextView
            android:id="@+id/tv_title_hobi"
            style="@style/Font.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/hobi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ttl_detail" />

        <TextView
            style="@style/Font.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/TitikDua"
            app:layout_constraintEnd_toStartOf="@+id/VGuideLine"
            app:layout_constraintTop_toBottomOf="@id/tv_ttl_detail" />

        <TextView
            android:id="@+id/tv_hobi_detail"
            style="@style/Font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/VGuideLine"
            app:layout_constraintTop_toBottomOf="@id/tv_ttl_detail"
            app:layout_constraintWidth_default="wrap"
            tools:text="Gaming" />

        <TextView
            android:id="@+id/tv_title_desc"
            style="@style/Font.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/deskripsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hobi_detail" />

        <TextView
            style="@style/Font.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/TitikDua"
            app:layout_constraintEnd_toStartOf="@+id/VGuideLine"
            app:layout_constraintTop_toBottomOf="@id/tv_hobi_detail" />

        <TextView
            android:id="@+id/tv_desc_detail"
            style="@style/Font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/VGuideLine"
            app:layout_constraintTop_toBottomOf="@id/tv_hobi_detail"
            app:layout_constraintWidth_default="wrap"
            tools:text="Udah itu Aja Yah" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>